--- a/style.css
+++ b/style.css
@@ -263,6 +263,12 @@ background-image: linear-gradient(315deg, #aff6cf 0%, #9f98e8 74%);
     transition:0.5s;
 }
 
+.btn-2:hover{
+  background-color:#000;
+  color:#fff;
+  border:2px solid #0019df98 ;
+}
+
 
   
   
