--- a/style.css
+++ b/style.css
@@ -264,8 +264,8 @@ background-image: linear-gradient(315deg, #aff6cf 0%, #9f98e8 74%);
 }
 
 .btn-2:hover{
-  background-color:#000;
-  color:#fff;
+  background-color:#fff;
+  color:#000;
   border:2px solid #0019df98 ;
 }
 
